bugfix: alignment landingpage & header btn

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/navbar.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/navbar.less
@@ -19,9 +19,6 @@ nav {
   padding: 10px;
 }
 
-.navbar-item.navbar-button {
-  padding: 9px 5px;
-}
 
 .navbar-item:not(.navbar-button) a:hover,
 .navbar-item a:hover::after {
